<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/home_menu"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home">

    </item>

    <item
        android:id="@+id/categories_menu"
        android:enabled="true"
        android:icon="@drawable/ic_categories"
        android:title="@string/saved">

    </item>
    <item
        android:id="@+id/saved_menu"
        android:enabled="true"
        android:icon="@drawable/ic_fav"
        android:title="@string/categories">

    </item>

    <item
        android:id="@+id/more_menu"
        android:enabled="true"
        android:icon="@drawable/ic_more"
        android:title="@string/more">

    </item>


</menu>