<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="ContentDescription">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/test_email"
                android:theme="@style/tv_title" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layoutDirection="ltr"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_old_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/test_price"
                    android:theme="@style/tv_subtitle2" />

                <TextView
                    android:id="@+id/tv_real_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/test_price"
                    android:textColor="@color/main_color"
                    android:textStyle="bold"
                    android:theme="@style/tv_subtitle2" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="5dp"
                android:text="@string/test_date"
                android:theme="@style/tv_subtitle2"
                app:drawableStartCompat="@drawable/ic_date" />


            <RatingBar
                android:id="@+id/rating_bar"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="start|center" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/white"
        android:layout_marginEnd="5dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imv_hot_discount_product"
                android:layout_width="145dp"
                android:layout_height="125dp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/ic_favorite" />
        </FrameLayout>
    </androidx.cardview.widget.CardView>


</FrameLayout>

